--- a/attractive.html
+++ b/attractive.html
@@ -6,8 +6,19 @@
 	<title>attractive</title>
 </head>
 <body>
-	<div class="card">attractive&nbsp;<i>/əˈtræktɪv/</i></div><div><br></div>
+	<div class="card">attractive&nbsp;
+		<i>/əˈtræktɪv/ (adjective)</i>
+		<div><br></div>
+
 	<hr id=answer>
-	<div class="card">привлекательный</div>
+	
+	<div class="backcard">
+		<div class="word">BEAUTIFUL</div>
+		<div class="level">A2</div>
+		<span class="translate">beautiful or pleasant to look at lorem</span>
+		<div class="russian">привлекательный</div>
+		<div class="example">an attractive woman</div>
+	</div>
+	</div>
 </body>
 </html>
