--- a/attractive.html
+++ b/attractive.html
@@ -9,9 +9,9 @@
 	<div class="card">attractive&nbsp;
 		<i>/əˈtræktɪv/ (adjective)</i>
 		<div><br></div>
-
+	</div>
 	<hr id=answer>
-	
+	<div class="card">
 	<div class="backcard">
 		<div class="word">BEAUTIFUL</div>
 		<div class="level">A2</div>
